--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <button id="start-button">Start Game</button>
                 <h3>Use the arrow keys on your keyboard to control the dog!</h3>
                 <h4>Your sheepdog must lead the sheep up!</h4>
-                <h3>Your time is 2 minutes!</h3>
+                <h3>Your time is One minutes!</h3>
                
                 <!-- <div>
                    <h2>States</h2>
@@ -32,7 +32,7 @@
            <div  style=" text-align: center;
            padding: 55px 400px 0px 0px;">
               <h1>Congratulations! <br> you won.....!!!</h1>
-              <button id="start-again-button">Start Game</button>
+              <button id="start-again-button">Main Menu</button>
               <br>
               <img src="./Image/happy-dog.png" alt="happy-dog" class="dog-happy">
           </div>
